--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,8 @@
               "src/assets"
             ],
             "styles": [
+
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
